# minitorch

./: pyproject.toml
minitorch/: module.py  operators.py
src/minitorch/: __init__.py
tests/: test_module.py  test_operators.py
