[project]
name = "minitorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colorama==0.4.3",
    "hypothesis==6.54",
    "mypy==0.971",
    "numba==0.56",
    "numpy==1.22",
    "pre-commit==2.20.0",
    "pytest==7.1.2",
    "pytest-env>=0.6.2",
    "pytest-runner==5.2",
    "typing-extensions>=4.12.2",
    "datasets==2.4.0",
    "embeddings==0.0.8",
    "networkx==2.4",
    "plotly==4.14.3",
    "pydot==1.4.1",
    "python-mnist>=0.7",
    "streamlit==1.12.0",
    "streamlit-ace>=0.1.1",
    "torch>=2.4.0",
    "watchdog==1.0.2",
    "altair<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
